# terraform-modules

./: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/scripts/: check-branch-name.sh  check-changed-file.sh  check-changelog-has-version.sh  check-tag.sh  create-tag.sh
.github/workflows/: auto-tagging.yaml  check-changelog.yaml  check-tag.yaml  check-version-upgraded.yaml  enforce-branch-naming.yaml
modules/aws/: provider.tf  shared_variables.tf
modules/aws/iam/oidc-provider/: README.md  main.tf  output.tf  variables.tf
modules/aws/iam/role/: README.md  main.tf  output.tf  variables.tf
modules/aws/s3/: README.md  main.tf  output.tf  variables.tf
modules/aws/vpc/: README.md  endpoints.tf  main.tf  output.tf  security_group.tf  security_group_rules.tf  variables.tf
